--- a/TrashCollector/Views/Home/Index.cshtml
+++ b/TrashCollector/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Hello and Welcome to TheeRyan's Trash Collection Management inc.   </h1>
+        <img src="~/img/cartoon (2).jpg" class="col-sm-10" alt="oh no">
+        <p></a>.</p>
+    </div>
