--- a/TrashCollector/Views/Customers/CustomerHomepage.cshtml
+++ b/TrashCollector/Views/Customers/CustomerHomepage.cshtml
@@ -1,4 +1,18 @@
-﻿<!DOCTYPE html>
+﻿@model IEnumerable<TrashCollector.Models.Customer>
+
+@*@{
+    ViewData["Title"] = "Customer Homepage";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
+}*@
+
+
+
+
+
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -31,20 +45,6 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - TrashCollector - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
+   
 </body>
 </html>
