--- a/TrashCollector/Views/Customers/CustomerHomepage.cshtml
+++ b/TrashCollector/Views/Customers/CustomerHomepage.cshtml
@@ -53,17 +53,29 @@
             @Html.DisplayNameFor(model => model.Account.StartDay)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Account.EndDay)
+            @Html.DisplayFor(model => model.Account.StartDay)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Account.PickupDay)
+        </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Account.PickupDay)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Account.OneTimePickup)
+        </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Account.OneTimePickup)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Account.Balance)
+        </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Account.Balance)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Account.AccountStatus)
+        </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Account.AccountStatus)
         </dd>
