--- a/TrashCollector/Views/Customers/Edit.cshtml
+++ b/TrashCollector/Views/Customers/Edit.cshtml
@@ -55,10 +55,21 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Account" class="control-label"></label>
-                <input asp-for="Account" class="form-control" />
-                <span asp-validation-for="Account" class="text-danger"></span>
+                <label asp-for="Account.StartDay" class="control-label"></label>
+                <input asp-for="Account.StartDay" class="form-control" />
+                <span asp-validation-for="Account.StartDay" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Account.EndDay" class="control-label"></label>
+                <input asp-for="Account.EndDay" class="form-control" />
+                <span asp-validation-for="Account.EndDay" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Account.OneTimePickup" class="control-label"></label>
+                <input asp-for="Account.OneTimePickup" class="form-control" />
+                <span asp-validation-for="Account.OneTimePickup" class="text-danger"></span>
+            </div>
+         
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
