--- a/TrashCollector/Views/Customers/EditProfile.cshtml
+++ b/TrashCollector/Views/Customers/EditProfile.cshtml
@@ -58,15 +58,18 @@
                 <label asp-for="Account.OneTimePickup" class="control-label"></label>
                 <input asp-for="Account.OneTimePickup" class="form-control" />
                 <span asp-validation-for="Account.OneTimePickup" class="text-danger"></span>
-            </div>    
-                <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
-                </div>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="CustomerHomepage">Back to List</a>
 </div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
