--- a/TrashCollector/Views/Customers/Edit.cshtml
+++ b/TrashCollector/Views/Customers/Edit.cshtml
@@ -25,16 +25,6 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <select asp-for="AppUserId" class="form-control" asp-items="ViewBag.AppUserId"></select>
-                <span asp-validation-for="AppUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AppUser.Email" class="control-label"></label>
-                <select asp-for="AppUser.Email" class="form-control" asp-items="ViewBag.AppUser.Email"></select>
-                <span asp-validation-for="AppUser.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Address.StreetAddress" class="control-label"></label>
                 <input asp-for="Address.StreetAddress" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
@@ -65,11 +55,20 @@
                 <span asp-validation-for="Account.EndDay" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Account.OneTimePickup" class="control-label"></label>
-                <input asp-for="Account.OneTimePickup" class="form-control" />
-                <span asp-validation-for="Account.OneTimePickup" class="text-danger"></span>
+                <label asp-for="Account.PickupDay" class="control-label"></label>
+                <select asp-for="Account.PickupDay" class="form-control">
+                    <option value="Sunday">Sunday</option>
+                    <option value="Monday">Monday</option>
+                    <option value="Tuesday">Tuesday</option>
+                    <option value="Wednesday">Wednesday</option>
+                    <option value="Thursday">Thursday</option>
+                    <option value="Friday">Friday</option>
+                    <option value="Saturday">Saturday</option>
+                </select>
+                <span asp-validation-for="Account.PickupDay" class="text-danger"></span>
+
             </div>
-         
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
