--- a/TrashCollector/Views/Customers/EditProfile.cshtml
+++ b/TrashCollector/Views/Customers/EditProfile.cshtml
@@ -26,22 +26,22 @@
             </div>
             <div class="form-group">
                 <label asp-for="Address.StreetAddress" class="control-label"></label>
-                <select asp-for="Address.StreetAddress" class="form-control" asp-items="ViewBag.Address"></select>
+                <input asp-for="Address.StreetAddress" class="form-control" />
                 <span asp-validation-for="Address.StreetAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address.City" class="control-label"></label>
-                <select asp-for="Address.City" class="form-control" asp-items="ViewBag.Address"></select>
+                <input asp-for="Address.City" class="form-control" />
                 <span asp-validation-for="Address.City" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address.State" class="control-label"></label>
-                <select asp-for="Address.State" class="form-control" asp-items="ViewBag.Address"></select>
+                <input asp-for="Address.State" class="form-control" />
                 <span asp-validation-for="Address.State" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address.ZipCode" class="control-label"></label>
-                <select asp-for="Address.ZipCode" class="form-control" asp-items="ViewBag.Address"></select>
+                <input asp-for="Address.ZipCode" class="form-control" />
                 <span asp-validation-for="Address.ZipCode" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -53,6 +53,19 @@
                 <label asp-for="Account.EndDay" class="control-label"></label>
                 <input asp-for="Account.EndDay" class="form-control" />
                 <span asp-validation-for="Account.EndDay" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Account.PickupDay" class="control-label"></label>
+                <select asp-for="Account.PickupDay" class="form-control">
+                    <option value="Sunday">Sunday</option>
+                    <option value="Monday">Monday</option>
+                    <option value="Tuesday">Tuesday</option>
+                    <option value="Wednesday">Wednesday</option>
+                    <option value="Thursday">Thursday</option>
+                    <option value="Friday">Friday</option>
+                    <option value="Saturday">Saturday</option>
+                </select>
+                <span asp-validation-for="Account.PickupDay" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Account.OneTimePickup" class="control-label"></label>
