--- a/TrashCollector/Views/Employees/EmployeeHomepage.cshtml
+++ b/TrashCollector/Views/Employees/EmployeeHomepage.cshtml
@@ -10,7 +10,7 @@
 
 <h4>Customer with pick up's today</h4>
 <hr />
-<table class="table">
+@*<table class="table">
     <thead>
         <tr>
 
@@ -35,8 +35,8 @@
             <th>
                 @Html.DisplayNameFor(model => model.Account)
             </th>
-            <th></th>
-        <tr>
+            <th></th>*@
+        @*<tr>
 
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
@@ -72,5 +72,5 @@
         
          }
     </tbody>
-</table>
+</table>*@
 
