--- a/TrashCollector/Views/Employees/EmployeeHomepage.cshtml
+++ b/TrashCollector/Views/Employees/EmployeeHomepage.cshtml
@@ -1,19 +1,28 @@
 ﻿@model IEnumerable<TrashCollector.Models.Customer>
 
 @{
-    ViewData["Title"] = "EmployeeHomepage";
+    ViewData["Title"] = "Employee Homepage";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>EmployeeHomepage</h1>
+<h1>Index</h1>
 
-
-<h4>Customer with pick up's today</h4>
-<hr />
-@*<table class="table">
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<form asp-controller="Customers" asp-action="Index">
+    <p>
+        Filter by PickupDay: <input type="text" name="SearchString">
+        <input type="submit" value="Filter" />
+        <a asp-action="Index">Show All Customers</a>
+    </p>
+</form>
+<table class="table">
     <thead>
         <tr>
-
+            <th>
+                @Html.DisplayNameFor(model => model.AppUserId)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
@@ -33,44 +42,46 @@
                 @Html.DisplayNameFor(model => model.Address.ZipCode)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Account)
+                @Html.DisplayNameFor(model => model.Account.PickupDay)
             </th>
-            <th></th>*@
-        @*<tr>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address.StreetAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address.State)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address.ZipCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Account)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            <th></th>
         </tr>
-       
     </thead>
-    <tbody>
-      
-        
-         }
-    </tbody>
-</table>*@
+    @*<tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AppUserId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address.StreetAddress)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address.City)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address.State)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address.ZipCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Account.PickupDay)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>*@
+</table>
 
