i have the google maps api working on all customers. now i need to get the filtring by day working next

--- a/TrashCollector/Views/Customers/Details.cshtml
+++ b/TrashCollector/Views/Customers/Details.cshtml
@@ -68,7 +68,7 @@
    
     function initMap() {
         var myLatLng = { lat: @Model.Address.Lat, lng: @Model.Address.Lng};
-        var map = new google.maps.Map(document.getElementById('map'), {
+        var map = new google.maps.Map(document.getElementById('maps'), {
             zoom: 15,
             center: myLatLng
         });
